--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <button class="btn" id="openGift">Open Gift ✨</button>
           <button class="btn secondary" id="printBtn" title="Save as PDF">Print / Save PDF</button>
         </div>
-        <p class="muted">Made with appreciation, not apps. Works offline. Share by sending this file.</p>
+        <p class="muted">Thank you for believing me </p>
       </div>
       <div class="card">
         <h3>Mini Quiz: You made learning fun</h3>
@@ -111,7 +111,7 @@
         <p class="muted">These are the words we think of when we think of you.</p>
         <div class="cloud" id="cloud"></div>
         <div style="margin-top:10px; display:flex; gap:8px; flex-wrap:wrap">
-          <span class="pill">Drag to select & copy image while printing</span>
+          <span class="pill">with love</span>
           <button class="btn secondary" id="shuffleCloud">Shuffle Words</button>
         </div>
       </div>
@@ -276,3 +276,4 @@
   </script>
 </body>
 </html>
+
